--- a/Margadarshan_frontend/src/css-files/ExamSection.css
+++ b/Margadarshan_frontend/src/css-files/ExamSection.css
@@ -57,13 +57,9 @@
     background-color: #FFE34F;
 }
 .dates h1{
-    /* width: 300px; */
     margin-top: 320px;
     text-align:start;
-    /* margin-top:300px; */
-    /* margin: 2%; */
     margin-left: 8%;
-    /* color: #000; */
 }
 
 @media screen and (max-width:1360px){ 
@@ -86,4 +82,59 @@
     .exam_image{
         display: none;
     }
+}
+table,th,td{
+    border:2px solid black;
+}
+table{
+    border-collapse: collapse;
+    width: 60%;
+    margin-left: 15%;
+}
+.table-container{
+    max-height: 300px;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
+th{
+    font-size: 23px;
+    width: 25%;
+    height: 80px;
+    background-color: black;
+    color: #FFFFFF;
+    position: sticky;
+    top: 0px;
+}
+td{
+    font-weight:800;
+    font-size: large;
+    height:50px;
+}
+table,th,td{
+    border:2px solid black;
+}
+table{
+    /* border-collapse: collapse; */
+    width: 60%;
+    margin-left: 15%;
+}
+.table-container{
+    max-height: 300px;
+    max-width: 100%;
+    overflow-y: scroll;
+    margin-top: 50px;
+}
+th{
+    font-size: 23px;
+    width: 25%;
+    height: 80px;
+    background-color: black;
+    color: #FFFFFF;
+    position: sticky;
+    top: 0px;
+}
+td{
+    font-weight:800;
+    font-size: large;
+    height:50px;
 }
