--- a/Margadarshan_frontend/src/css-files/addUniversity.css
+++ b/Margadarshan_frontend/src/css-files/addUniversity.css
@@ -71,11 +71,47 @@
 .uniMajor-addUni, .uniFees-addUni, .uniLength-addUni {
     margin-top: 10px;
 }
-.upload-btn-addUni {
+.upload-btn-addUni, .next-btn-addUni, .back-btn-addUni {
     background-color: white;
     color: black;
     border-radius: 20px;
     width: 150px;
+}
+
+.addUni-textfield-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+}
+.addUni-textfield-2 label {
+    color: #FFE34F;
+    font-family: "Nunito";
+}
+.addUni-textfield-2 input {
+    width: 200px;
+    height: 30px;
+}
+.uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni {
+    display: flex;
+    gap: 20px;
+}
+.uniAvGpa-container-addUni, .uniAvSats-container-addUni, .uniAvGre-container-addUni, .uniAvIelts-container-addUni, .uniAvToefl-container-addUni, .uniSupEssay-container-addUni {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+.uniSupEssay-dropdown-addUni {
+    width: 100px;
+    height: 30px;
+    background-color: white;
+    color: black;
+}
+.add-uni-buttons {
+    display: flex;
+    margin-top: 30px;
+    gap: 30px;
+    margin-right: -80px;
 }
 
 @media screen and (max-width: 1200px) {
