--- a/Margadarshan_frontend/src/css-files/addUniversity.css
+++ b/Margadarshan_frontend/src/css-files/addUniversity.css
@@ -102,10 +102,11 @@
     align-items: start;
 }
 .uniSupEssay-dropdown-addUni {
-    width: 100px;
+    width: 110px;
     height: 30px;
     background-color: white;
     color: black;
+    border-radius: 5px;
 }
 .add-uni-buttons {
     display: flex;
@@ -128,24 +129,38 @@
         height: 40px;
         font-size: 12px;
     }
-    .addUni-textfield input {
+    .addUni-textfield input, .addUni-textfield-2 input {
         width: 150px;
         font-size: 9px;
         height: 20px;
+    }
+    .back-btn-addUni, .upload-btn-addUni, .next-btn-addUni {
+        width: 110px;
+    }
+    .add-uni-buttons {
+        margin-right: -40px;
     }
 }
 
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .add-uni-mainContainer-addUni {
         left: 20px;
-        width: 400px;
+        width: 450px;
         height: 450px;
     }
-    .uniCity-uniState-container-addUni {
+    .addUni-textfield-2 {
+        gap: 10px;
+        margin-right: 20px;
+    }
+    .uniCity-uniState-container-addUni, .uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni {
         flex-direction: column;
     }
-    .upload-btn-addUni {
+    .next-btn-addUni {
         margin-top: 20px;
+    }
+    .add-uni-buttons {
+        margin-top: 20px;
+        gap: 10px;
     }
 }
 
