--- a/Margadarshan_frontend/src/css-files/roadmap.css
+++ b/Margadarshan_frontend/src/css-files/roadmap.css
@@ -9,20 +9,22 @@
 .open-sidebar-btn-roadmap:hover {
     border: solid white 2px;
 }
+
 .roadmap-img {
     margin-top: 100px;
 }
 
 .sidebar-roadmap {
-    height: 100%;    
+    height: 100%;
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 10vh;; 
+    top: 10vh;
+    ;
     left: 0px;
     background-color: white;
     overflow-x: hidden;
-    padding-top: 20px; 
+    padding-top: 20px;
     transition: 0.5s;
 }
 .close-sidebar-btn-roadmap {
@@ -34,4 +36,126 @@
 .sidebar-title-roadmap {
     margin-top: 40px;
     font-family: "Paytone One"
+}
+
+.univesity-gpa-container-roadmap {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
+}
+.uni-dropdown-roadmap {
+    width: 170px;
+    height: 30px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    border: solid black 2px;
+}
+.gpa-input-roadmap {
+    height: 35px;
+    width: 200px;
+}
+
+.standard-test-container-roadmap,
+.english-test-container-roadmap {
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 10px;
+    border: solid black 2px;
+    border-radius: 10px;
+    margin-left: 15px;
+    margin-top: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+.sat-gre-container-roadmap,
+.ielts-toefl-container-roadmap {
+    display: flex;
+    gap: 20px;
+}
+.standard-test-dropdown-roadmap,
+.english-test-dropdown-roadmap {
+    width: 100px;
+    height: 30px;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    border: solid black 2px;
+}
+.standard-test-score-container-roadmap,
+.english-test-score-container-roadmap {
+    display: flex;
+    gap: 20px;
+}
+.standard-test-score-input-roadmap,
+.english-test-score-input-roadmap {
+    width: 100px;
+    height: 30px;
+}
+
+.sup-essay-container-roadmap {
+    display: flex;
+    align-items: center;
+    width: 300px;
+    gap: 20px;
+    margin-left: 15px;
+    margin-top: 30px;
+}
+.radio-container1-roadmap,
+.radio-container2-roadmap {
+    display: flex;
+    position: relative;
+    padding-left: 25px;
+    align-items: baseline;
+}
+.radio-container1-roadmap input,
+.radio-container2-roadmap input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+}
+.checkmark-roadmap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    border: solid black;
+    border-radius: 50%;
+}
+.radio-container1-roadmap:hover input~.checkmark-roadmap,
+.radio-container2-roadmap:hover input~.checkmark-roadmap {
+    background-color: rgb(229, 226, 226);
+}
+.checkmark-roadmap:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.radio-container1-roadmap input:checked~.checkmark-roadmap:after,
+.radio-container2-roadmap input:checked~.checkmark-roadmap:after {
+    display: block;
+}
+.radio-container1-roadmap .checkmark-roadmap:after,
+.radio-container2-roadmap .checkmark-roadmap:after {
+    top: 4px;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: black;
+}
+
+.submit-btn-roadmap {
+    margin-left: 150px;
+    width: 150px;
+    height: 40px;
+    margin-top: 30px;
+    line-height: 0.8;
 }
