--- a/Margadarshan_frontend/src/css-files/aboutUsStyle.css
+++ b/Margadarshan_frontend/src/css-files/aboutUsStyle.css
@@ -22,7 +22,7 @@ body{
     margin: 10px 10px 10px 10px;
 }
 
-.color-overlay {
+.abt-color-overlay {
     position: absolute;
     width: 100%;
     height: 100%;
