--- a/Margadarshan_frontend/src/css-files/educationstyle.css
+++ b/Margadarshan_frontend/src/css-files/educationstyle.css
@@ -1,8 +1,9 @@
 .edu-content {
-    height: 100%;
-    width: 100%;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     position: relative;
     top: 10vh;
@@ -13,10 +14,10 @@
 
 .edu-sidenavbar {
     height: 100%;
-    width: 350px;
+    width: 25vw;
     position: fixed;
     z-index: 1;
-    top: 10vh;;
+    top: 90px;
     left: 0px;
     background-color: #152039;
     overflow-x: hidden;
@@ -27,8 +28,8 @@
     color: #FFE34F;
     background-color: #152039;
     font-family: "Paytone One";
-    font-size: 60px;
-    margin-left: -30px;
+    font-size: 4vw;
+    margin-left: 0.7vw;
 }
 
 .edu-sidenav-content a {
@@ -38,9 +39,9 @@
     color: white;
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 30px;
+    margin-top: 3vw;
     padding: 12px;
-    font-size: 30px;
+    font-size: 2.5vw;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -52,4 +53,172 @@
 .edu-sidenav-content a:hover {
     background-color: #FFE34F;
     color: #152039;
+}
+
+.edu-main{
+    background-color: white;
+    position: relative;
+    top: 20px;
+    margin-left: 25vw;
+    height: 100%;
+}
+
+.edu-title{
+    margin-top: 5px;
+}
+
+.edu-title h1{
+    margin-left: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3.5vw;
+}
+
+.edu-title p{
+    text-align: left;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: "Berlin Sans FB";
+    font-size: 2vw;
+}
+
+.edu-timeline{
+    position: relative;
+    background-color: white;
+}
+
+.edu-addButton {
+    position: absolute;
+    right: 20px;
+    top: -5px;
+    color: white;
+    padding: 0 5px 5px 5px;
+    font-size: 3vw;
+    background-color: #383d52;
+    border-radius: 6px;
+}
+
+.edu-addButton:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.edu-form {
+    position: absolute;
+    z-index: 9999;
+    background-color: #383d52;
+    padding: 30px;
+    border-radius: 10px;
+    right: 20px;
+    margin-left: 20px;
+    top: 6vw;
+}
+
+.edu-form h3{
+    color: #f1f1f1;
+    margin-bottom: 20px;
+}
+
+.edu-institute {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#edu-name {
+    color: #FFE34F;
+    font-family: "Nunito";
+    margin-bottom: 5px;
+}
+
+.edu-lvl {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#edu-level {
+    color: #FFE34F;
+    font-family: "Nunito";
+    margin-bottom: 5px;
+}
+
+#eduName, #eduLevel {
+    width: 350px;
+    height: 30px;
+    background-color: #f1f1f1;
+    font-family: "Barlow Condensed Medium";
+    color: #152039;
+}
+
+#edu-submit{
+    background-color: #f1f1f1;
+    color: #152039;
+    height: 30px;
+    margin-top: 15px;
+    padding: 2px 5px 25px 5px;
+}
+
+@media (max-width: 660px) {
+    .edu-form {
+        position: absolute;
+        z-index: 9999;
+        background-color: #383d52;
+        padding: 30px;
+        border-radius: 10px;
+        right: 20px;
+        margin-left: 20px;
+        top: 6vw;
+    }
+
+    .edu-form h3{
+        color: #f1f1f1;
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+
+    .edu-institute {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    #edu-name {
+        color: #FFE34F;
+        font-family: "Nunito";
+        margin-bottom: 5px;
+    }
+
+    .edu-lvl {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+
+    #edu-level {
+        color: #FFE34F;
+        font-family: "Nunito";
+        margin-bottom: 5px;
+    }
+
+    #eduName, #eduLevel {
+        width: 250px;
+        height: 30px;
+        background-color: #f1f1f1;
+        font-family: "Barlow Condensed Medium";
+        color: #152039;
+    }
+
+    #edu-submit{
+        background-color: #f1f1f1;
+        color: #152039;
+        height: 30px;
+        padding: 2px 5px 25px 5px;
+    }
 }
