--- a/Margadarshan_frontend/src/css-files/SOPUpload.css
+++ b/Margadarshan_frontend/src/css-files/SOPUpload.css
@@ -1,11 +1,9 @@
-
 .t{
     position: absolute;
-    position: fixed;
     top: 200px;
-  width: 800px;
-  height: 500px;
-     color:black;
+    width: 800px;
+    height: 500px;
+    color:black;
     align-content: center;
     align-items: center; 
     justify-content: center;
@@ -25,12 +23,20 @@
     border: 3px solid blueviolet;
 
 }
-#clu{
-
+.sop_info{
     font-style:italic;
     font-size:50px;
 }
-.other-button{
+.sop_intro{
+    font-weight:700;
+    font-size:30px;
+}
+@media screen and (max-width:755px) {
+    .sop_intro{
+        font-size:25px;
+    }
+}
+#sopUploadButton{
     width: 200px;
     height: 50px;
     margin-left: 200px;
@@ -38,10 +44,13 @@
     background-color: darkgrey;
     border:1px solid black;
 }
-.other-button:hover{
+#sopUploadButton:hover{
     cursor: pointer;
     background-color:white;
     border-width: 2.5px;
     color:blue;
 
  } 
+/* @media screen  and (max-width:1000px){
+    
+} */
