--- a/Margadarshan_frontend/src/css-files/addUniversity.css
+++ b/Margadarshan_frontend/src/css-files/addUniversity.css
@@ -92,11 +92,11 @@
     width: 200px;
     height: 30px;
 }
-.uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni {
+.uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni, .uniAvGpa-container-addUni {
     display: flex;
     gap: 20px;
 }
-.uniAvGpa-container-addUni, .uniAvSats-container-addUni, .uniAvGre-container-addUni, .uniAvIelts-container-addUni, .uniAvToefl-container-addUni, .uniSupEssay-container-addUni {
+.uniBachelorsGpa-container-addUni, .uniMastersGpa-container-addUni, .uniAvSats-container-addUni, .uniAvGre-container-addUni, .uniAvIelts-container-addUni, .uniAvToefl-container-addUni, .uniSupEssay-container-addUni {
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -145,14 +145,14 @@
 @media screen and (min-width: 400px) and (max-width: 750px) {
     .add-uni-mainContainer-addUni {
         left: 20px;
-        width: 450px;
-        height: 450px;
+        width: 460px;
+        height: 520px;
     }
     .addUni-textfield-2 {
         gap: 10px;
         margin-right: 20px;
     }
-    .uniCity-uniState-container-addUni, .uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni {
+    .uniCity-uniState-container-addUni, .uniAvSats-uniAvGre-container-addUni, .uniAvIelts-uniAvToefl-container-addUni, .uniAvGpa-container-addUni {
         flex-direction: column;
     }
     .next-btn-addUni {
