--- a/Margadarshan_frontend/src/css-files/educationstyle.css
+++ b/Margadarshan_frontend/src/css-files/educationstyle.css
@@ -14,7 +14,7 @@
 
 .edu-sidenavbar {
     height: 100%;
-    width: 25vw;
+    width: 20vw;
     position: fixed;
     z-index: 1;
     top: 90px;
@@ -28,8 +28,9 @@
     color: #FFE34F;
     background-color: #152039;
     font-family: "Paytone One";
-    font-size: 4vw;
-    margin-left: 0.7vw;
+    font-size: 3.5vw;
+    margin-left: 0.5vw;
+    margin-bottom: 2vw;
 }
 
 .edu-sidenav-content a {
@@ -39,9 +40,9 @@
     color: white;
     text-decoration: none;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 3vw;
-    padding: 12px;
-    font-size: 2.5vw;
+    margin-top: 0.5vw;
+    padding: 8px;
+    font-size: 2.2vw;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -58,26 +59,30 @@
 .edu-main{
     background-color: white;
     position: relative;
-    top: 20px;
-    margin-left: 25vw;
+    top: 15px;
+    margin-left: 20vw;
     height: 100%;
 }
 
 .edu-title{
-    margin-top: 5px;
+    margin-top: 1.3vw;
 }
 
 .edu-title h1{
-    margin-left: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 1vw;
+    margin-left: 3vw;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
     font-size: 3.5vw;
 }
 
 .edu-title p{
     text-align: left;
-    margin-left: 15px;
-    margin-right: 15px;
-    font-family: "Berlin Sans FB";
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-family: "Barlow Condensed Medium";
+    font-weight: bold;
     font-size: 2vw;
 }
 
@@ -162,6 +167,9 @@
 }
 
 @media (max-width: 660px) {
+    .edu-sidenav-content a {
+        font-size: 1.8vw;
+    }
     .edu-form {
         position: absolute;
         z-index: 9999;
@@ -220,5 +228,65 @@
         color: #152039;
         height: 30px;
         padding: 2px 5px 25px 5px;
+    }
+}
+
+/*------------------------------------------------------*/
+
+.test-version{
+    /*background-color: rgba(94, 92, 92, 0.32);*/
+    /*padding: 30px 30px 30px 30px;*/
+}
+
+.sample{
+    /*background-color: bisque;*/
+    margin: 20px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.cont{
+    display: flex;
+    flex-direction: row;
+}
+
+#edu-icon{
+    font-size: 36px;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.ed-division{
+    display: flex;
+    flex-direction: row;
+    gap: 2vw;
+}
+
+.random{
+    padding: 0;
+    background-color: white;
+    color: black;
+    font-size: 2vw;
+}
+
+.edtext{
+    margin-left: 20px;
+    margin-top: 5px;
+    text-align: left;
+}
+
+.edtext h2{
+    font-size: 2vw;
+    font-weight: bold;
+}
+
+.edtext h3{
+    font-size: 1.5vw;
+}
+
+@media (max-width: 660px) {
+    .random{
+        font-size: 3vw;
     }
 }
