roadmap sidebar complete (#114)

--- a/Margadarshan_frontend/src/css-files/register.css
+++ b/Margadarshan_frontend/src/css-files/register.css
@@ -26,7 +26,6 @@
 }
 .gyansarathi {
     font-size: 26px;
-    margin-top: -50px;
 }
 .website-img-container {
     display: flex;
@@ -49,6 +48,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+    gap: 10px;
 }
 .main-title, .subtitle {
     font-family: "Nunito";
