--- a/Margadarshan_frontend/src/css-files/mhomepagestyle.css
+++ b/Margadarshan_frontend/src/css-files/mhomepagestyle.css
@@ -657,7 +657,7 @@ body{
 .mhp-nv-scroll .mhp-nv-box{
     min-width: 270px;
     height: 300px;
-    background-color: #c9cbc3;
+    background-color: #152039;
     margin: 20px 30px 30px 30px;
     border-radius: 30px;
 }
