--- a/Margadarshan_frontend/src/css-files/roadmap.css
+++ b/Margadarshan_frontend/src/css-files/roadmap.css
@@ -33,20 +33,31 @@
     cursor: pointer;
 }
 
-.pop-up {
+.pop-up, .pop-up-down {
     display: flex;
     background-color: white;
-    margin-top: -50px;
     border-radius: 5px;
     padding-top: 5px;
     position: fixed;
+}
+.pop-up {
+    top: 120px;
+}
+.pop-up-down {
+    bottom: 35px;
+} 
+.gpa-popup-container {
+    z-index: 50;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sidebar-roadmap {
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 20;
+    z-index: 70;
     top: 10vh;
     ;
     left: 0px;
@@ -187,4 +198,9 @@
     height: 40px;
     margin-top: 30px;
     line-height: 0.8;
+}
+.submit-btn-roadmap:hover {
+    background-color: white;
+    color: black;
+    border: black solid 3px;
 }
