--- a/Margadarshan_frontend/src/css-files/register.css
+++ b/Margadarshan_frontend/src/css-files/register.css
@@ -98,7 +98,7 @@ input {
     width: 300px;
     height: 50px;
     border-radius: 30px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 .register-button:hover {
     background-color: white;
@@ -108,7 +108,8 @@ input {
 }
 .login-container {
     display: flex;
-    margin-left: 250px;
+    margin-left: 240px;
+    margin-top: 20px;
 }
 .already-account, .login {
     color: black;
@@ -119,6 +120,20 @@ input {
 .login:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.password-strength {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    margin-top: 35px;
+}
+.password-strength-item {
+    color: red;
+    margin-top: -5px;
+}
+.password-strength-item.green {
+    color: green; 
 }
 
 @media screen and (max-width : 1400px) {
