admin login complete

--- a/Margadarshan_frontend/src/css-files/login.css
+++ b/Margadarshan_frontend/src/css-files/login.css
@@ -36,10 +36,31 @@
     width: 500px;
     border-radius: 15px;
     margin-top: 110px;
-    margin-left: 300px;
+    margin-left: 250px;
 
     transition: margin-left 0.3s ease;
 }
+
+.admin-login-container {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    height: 600px;
+    width: 500px;
+    border-radius: 15px;
+    margin-top: 110px;
+    margin-left: 250px;
+
+    transition: margin-left 0.3s ease;
+}
+.admin-login-email{
+    margin-top: 20px;
+}
+
+.otp-container{
+    margin-top: 20px;
+}
+
 .page-heading-login {
     display: flex;
     flex-direction: column;
@@ -76,7 +97,7 @@ input {
     flex-direction: column;
     gap: 10px;
 }
-.error-message-email, .error-message-password {
+.error-message-email, .error-message-password, .error-message-admin {
     color: red;
     font-size: 12px;
     width: 100%;
@@ -88,11 +109,14 @@ input {
 .error-message-password {
     margin-left: -135px;
 }
+.error-message-admin {
+    margin-top: 10px;
+    margin-left: -75px;
+}
 
 .remember-forgot-login-container {
     display: flex;
-    align-items: center;
-    gap: 7px;
+    align-items: flex-end;
     margin-left: 55px;
     margin-top: 20px;
 }
@@ -119,13 +143,14 @@ input[type="checkbox"]::after {
 input[type="checkbox"]:checked:after {
     display: block;
 }
-.remember-login, .forgot-password-login {
+.forgot-password-login {
     color: black;
     font-family: "Nunito";
     font-size: 14px;
+    text-decoration: underline;
 }
 .forgot-password-login {
-    margin-left: 100px;
+    margin-left: 300px;
     margin-top: 15px;
 }
 .forgot-password-login:hover {
@@ -151,6 +176,13 @@ input[type="checkbox"]:checked:after {
     border: solid 3px black;
     color: black;
 }
+.admin-login-form {
+    margin: 10px 0 0 350px;
+}
+
+.back-to-user-login{
+    margin: 10px 10px -20px 300px;
+}
 
 @media screen and (max-width:1400px) {
     .left-sec-login {
@@ -163,6 +195,21 @@ input[type="checkbox"]:checked:after {
         margin-top: 200px;
         margin-left: -500px;
         height: 550px;
+    }
+    .admin-login-form {
+        margin: 10px 0 -30px 350px;
+    }
+    .back-to-user-login{
+        margin: 10px 10px -20px 300px;
+    }
+    .admin-login-container {
+        margin-top: 200px;
+        margin-left: -500px;
+        height: 550px;
+    }
+    .forgot-password-login {
+        margin-left: 300px;
+        margin-top: 15px;
     }
 }
 
@@ -186,4 +233,28 @@ input[type="checkbox"]:checked:after {
     .login-btn-container {
         margin-left: 40px;
     }
+    .admin-login-form {
+        margin: 10px 0 -30px 300px;
+    }
+    .admin-login-container {
+        margin-left: -430px;
+        width: 450px;
+    }
+    .admin-login-container .page-heading-login .login-to-account {
+        text-align: start;
+    }
+    .back-to-user-login{
+        margin: 10px 10px -20px 250px;
+    }
+    .forgot-password-login {
+        margin-left: 250px;
+        margin-top: 15px;
+    }
+}
+
+.admin-login-container-button{
+    margin: 12vw 10px 0 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
