--- a/Margadarshan_frontend/src/css-files/ForgotPassword.css
+++ b/Margadarshan_frontend/src/css-files/ForgotPassword.css
@@ -23,6 +23,16 @@
     font-size: 26px;
 }
 
+.back-btn-forgotP {
+    margin-left: 370px;
+    margin-top: 30px;
+    font-size: 24px;
+    color: black;
+}
+.back-btn-forgotP:hover {
+    cursor: pointer;
+}
+
 .right-sec-forgotP {
     display: flex;
     flex-direction: column;
@@ -40,7 +50,7 @@
     flex-direction: column;
     align-items: start;
     margin-left: 60px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .forgotP-title, .forgotP-subtitle {
     color: black;
