--- a/Margadarshan_frontend/src/css-files/AdminExam.css
+++ b/Margadarshan_frontend/src/css-files/AdminExam.css
@@ -1,41 +1,20 @@
 .adminExam_main{
     /* margin-top: 200px; */
-    margin-left: 600px;
-    width:600px;
-    height: 400px;
+    position: fixed;
+    margin-left:65vw;
+    width:30vw;
+    height: 430px;
+    /* height: 22vw; */
     background-color: #152039;
+    position: absolute;
+    z-index: 9999;
+    /* background-color: #383d52; */
+    padding: 30px;
+    /* border-radius: 10px; */
+    /* right: 20px; */
+    /* margin-left: 20px; */
+    /* top:3vw; */
 }
-/* .adminExam_Textfield{
-    display: flex;
-    justify-content: space-between;
-}
-.first_div{
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: 400px;
-    background-color: aqua;
-}
-.first_div label{
-    color: #FFE34F;
-    font-family: "Nunito";
-}
-.second_div{
-    width: 400px;
-    height: 400px;
-}
-.second_div input {
-    height: 40px;
-}
-.andminExam_Text{
-
-    font-weight:500;
-    font-size:30px;
-}
-input[type="date"] {
-    width: 250px;
-    height: 30px;
-} */
 .Ani{
     display: flex;
     flex-direction: column;
@@ -47,20 +26,102 @@ input[type="date"] {
     flex-direction: column;
     align-items: start;
     /* background-color:blue; */
-    width: 450px;
-    height:340px;
+    /* width: 450px; */
+    width:25vw;
+    height:330px;
+    /* height:17vw; */
     font-weight: 700;
+    /* padding-left:15px; */
+
+    z-index: 9999;
+
+}
+@media screen and (max-width:1300px) {
+    .Rasu{
+        background-color:blue;
+        width:35vw;
+        padding-left:10px;
+        /* height:330px; */
+        font-weight: 700;
+    }
+    .adminExam_main{
+        position: fixed;
+        margin-left:55vw;
+        width:35vw;
+        background-color: blueviolet;
+
+    }
+}
+@media screen and (max-width:1010px) {
+    .adminExam_main{
+        margin-left:45vw;
+        width:45vw;
+
+    }
+    input[type="text"] {
+        border-radius:5vw ;
+        width:1vw;
+    }
+    .Rasu label{
+        font-size:5px;
+        line-height:2vw;
+
+    
+    }
 }
 .Rasu label{
     color: #FFE34F;
     font-family: "Nunito";
     font-size: 25px;
+    /* font-size: 1.5vw; */
+    /* line-height: 3vw; */
     line-height: 70px;
+
+}
+input[type="text"] {
+    border-radius:5vw ;
+    width:330px;
 }
 .ExamAdmin_UploadButton{
     background-color: white;
     color: black;
-    border-radius: 20px;
+    /* border-radius: 20px; */
+    border-radius: 5vw;
     width: 150px;
-    margin-left: 360px;
+    /* width: 8vw; */
+    /* margin-left: 360px; */
+    margin-left: 20vw;
+    cursor: pointer;
 }
+.adminExam-Button{
+    /* position: absolute; */
+    position:fixed;
+    right: 30px;
+    top:40%;
+    /* top: 0; */
+    color: white;
+    padding: 0 5px 5px 5px;
+    font-size: 3vw;
+    background-color: #383d52;
+    border-radius: 6px;
+    z-index: 99999999;
+}
+.adminExam_manage{
+    position: relative;
+    background-color: aqua;
+}
+.ExamAdmin_UploadButton:disabled {
+    background-color: #ddd;
+    color: #666;
+    cursor: not-allowed;
+  }
+  
+  .adminExam-list {
+    margin-top: 20px;
+  }
+  
+  .adminExam-main-container {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
