--- a/Margadarshan_frontend/src/css-files/adminHeader.css
+++ b/Margadarshan_frontend/src/css-files/adminHeader.css
@@ -131,7 +131,7 @@
 }
 
 .admin-header-nav-dropdown-item:hover {
-    color: #FFE34F;;
+    color: #FFE34F;
 }
 
 .admin-header-nav-dropdown:hover {
