--- a/Margadarshan_frontend/src/css-files/mhomepagestyle.css
+++ b/Margadarshan_frontend/src/css-files/mhomepagestyle.css
@@ -210,7 +210,7 @@ body{
         font-size: calc(1.525rem + 3.3vh);
     }
     .road-second-line{
-        margin-left: 85px;
+        margin-left: 75px;
     }
 
     .mhp-img-plane {
@@ -268,7 +268,7 @@ body{
         font-size: calc(1.525rem + 3.3vh);
     }
     .road-second-line{
-        margin-left: 85px;
+        margin-left: 65px;
     }
 
     .mhp-img-plane {
@@ -326,7 +326,7 @@ body{
         font-size: calc(1.525rem + 3.3vh);
     }
     .road-second-line{
-        margin-left: 85px;
+        margin-left: 65px;
     }
 
     .mhp-img-plane {
@@ -351,20 +351,20 @@ body{
         min-height: 35vh;
     }
     #mhp-usa-main-header {
-        font-size: calc(1.525rem + 3.3vh);
+        font-size: 2rem;
     }
     .usa-second-line{
-        margin-left: 210px;
+        margin-left: 130px;
     }
 
     .mhp-img-uni {
         min-height: 35vh;
     }
     #mhp-uni-main-header {
-        font-size: calc(1.525rem + 3.3vh);
+        font-size: 2rem;
     }
     .uni-second-line{
-        margin-left: 85px;
+        margin-left: 53px;
     }
 
     .mhp-img-sch {
@@ -384,7 +384,7 @@ body{
         font-size: 2rem;
     }
     .road-second-line{
-        margin-left: 65px;
+        margin-left: 45px;
     }
 
     .mhp-img-plane {
@@ -395,22 +395,6 @@ body{
     }
     .plane-second-line{
         margin-left: 110px;
-    }
-}
-
-@media (max-width: 550px) {
-    #mhp-usa-main-header {
-        font-size: 2rem;
-    }
-    .usa-second-line{
-        margin-left: 130px;
-    }
-
-    #mhp-uni-main-header {
-        font-size: 2rem;
-    }
-    .uni-second-line{
-        margin-left: 53px;
     }
 }
 
@@ -539,22 +523,22 @@ body{
     padding: 5% 3%;
 }
 #mhp-testimonial-1 {
-    background-color: #7393B3;
-    color: #ffffff;
+    background-color: #9ac7d5;
+    color: rgba(21, 32, 57, 0.7);
     position: relative;
     z-index: 0;
 }
 #mhp-testimonial-2 {
-    background-color: #48556a;
-    color: #ffffff;
+    background-color: #A7C7E7;
+    color: rgba(21, 32, 57, 0.7);
 }
 #mhp-testimonial-3{
-    background-color: #313d52;
-    color: #ffffff;
+    background-color: #B6D0E2;
+    color: rgba(21, 32, 57, 0.7);
 }
 #mhp-testimonial-4 {
-    background-color: #19212e;
-    color: #ffffff;
+    background-color: #7393B3;
+    color: rgba(21, 32, 57, 0.7);
 }
 #mhp-test-img{
     height: 100px;
