--- a/Margadarshan_frontend/src/css-files/roadmap.css
+++ b/Margadarshan_frontend/src/css-files/roadmap.css
@@ -136,7 +136,6 @@
     position: fixed;
     z-index: 70;
     top: 10vh;
-    ;
     left: 0px;
     background-color: white;
     overflow-x: hidden;
@@ -280,4 +279,8 @@
     background-color: white;
     color: black;
     border: black solid 3px;
+}
+
+.bachelor-master-radio-label:hover, .sup-essay-radio-label:hover {
+    cursor: pointer;
 }
