--- a/Margadarshan_frontend/src/css-files/UserProfile.css
+++ b/Margadarshan_frontend/src/css-files/UserProfile.css
@@ -1,4 +1,3 @@
-
 .left-section-userP {
     background-color: #152039;
     display: flex;
@@ -26,6 +25,24 @@
     margin-left: 550px;
     margin-top: 150px;
 }
+.personal-details-edit-btn-container {
+    display: flex;
+    align-items: center;
+    gap: 5vw;
+}
+.edit-btn-userP {
+    color: #112657;
+    cursor: pointer;
+}
+.edit-btn-userP:hover {
+    text-decoration: underline;
+}
+.userDetails-userP-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 350px;
+}
 .personal-details-userP {
     font-family: "Nunito";
     font-size: 34px;
@@ -41,4 +58,114 @@
 }
 .profile-login-popup {
     margin-top: 300px;
+}
+
+.line-divider-userP {
+    width: 100%;
+    border: 2px solid grey;
+}
+
+.citizenship-input {
+    display: none;
+}
+.citizenship-img-userP {
+    height: 15vw;
+    cursor: pointer;
+}
+.citizenship-caption {
+    color: red;
+    font-family: "Nunito";
+}
+.citizenship-container {
+    display: flex;
+    gap: 70px;
+    margin-left: 30px;
+    margin-top: 10px;
+}
+
+.edit-profile-form {
+    background-color: #152039;
+    position: fixed;
+    top: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    border-radius: 20px;
+
+    visibility: ${isEditProfileVisible ? 'visible' : 'hidden'};
+}
+.edit-profile-form input {
+    margin-top: -15px;
+}
+.edit-profile-text {
+    color: #FFE34F;
+    font-family: "Nunito";
+}
+.edit-profile-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+@media screen and (max-width: 1000px) {
+    .personal-details-userP {
+        font-size: 26px;
+    }
+    .citizenship-container {
+        gap: 50px;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .left-section-userP {
+        width: 400px;
+    }
+    .main-img-userP {
+        height: 350px;
+    }
+    .right-section-userP {
+        margin-left: 450px;
+    }
+}
+
+@media screen and (max-width: 770px) {
+    .right-section-userP {
+        margin-left: 430px;
+    }
+    .citizenship-container {
+        gap: 30px;
+        margin-left: 20px;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 800px) {
+    .left-section-userP {
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        height: 150px;
+    }
+    .main-img-userP {
+        height: 150px;
+        margin-top: 0px;
+    }
+    .title-userP {
+        margin-left: 100px;
+    }
+    .right-section-userP {
+        margin-left: 50px;
+        margin-top: 270px;
+    }
+    .citizenship-img-userP {
+        height: 25vw;
+    }
+    .edit-profile-form {
+        top: 320px;
+    }
 }
