--- a/Margadarshan_frontend/src/css-files/UserProfile.css
+++ b/Margadarshan_frontend/src/css-files/UserProfile.css
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    width: 350px;
+    width: 100%;
 }
 .personal-details-userP {
     font-family: "Nunito";
@@ -65,12 +65,11 @@
     border: 2px solid grey;
 }
 
-.citizenship-input {
+.citizenship-input-editProfile {
     display: none;
 }
 .citizenship-img-userP {
     height: 15vw;
-    cursor: pointer;
 }
 .citizenship-caption {
     color: red;
@@ -88,9 +87,7 @@
     position: fixed;
     top: 200px;
     display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 10px;
+    gap: 20px;
 
     padding-left: 30px;
     padding-right: 30px;
@@ -100,6 +97,12 @@
     border-radius: 20px;
 
     visibility: ${isEditProfileVisible ? 'visible' : 'hidden'};
+}
+.edit-profile-left-section {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
 }
 .edit-profile-form input {
     margin-top: -15px;
@@ -111,6 +114,23 @@
 .edit-profile-btn:hover {
     background-color: white;
     color: black;
+}
+
+.edit-profile-right-section {
+    display: flex;
+    gap: 10px;
+    margin-top: -10px;
+}
+.citizenship-img-editProfile {
+    height: 20vh;
+    width: 15vw;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1400px) {
+    .edit-profile-form {
+        left: 200px;
+    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -132,6 +152,9 @@
     .right-section-userP {
         margin-left: 450px;
     }
+    .edit-profile-form {
+        left: 50px;
+    }
 }
 
 @media screen and (max-width: 770px) {
@@ -141,6 +164,9 @@
     .citizenship-container {
         gap: 30px;
         margin-left: 20px;
+    }
+    .edit-profile-left-section input {
+        width: 30vw;
     }
 }
 
@@ -167,5 +193,12 @@
     }
     .edit-profile-form {
         top: 320px;
+    }
+    .citizenship-img-editProfile {
+        height: 15vh;
+        width: 25vw;
+    }
+    .edit-profile-right-section {
+        flex-direction: column;
     }
 }
