--- a/Margadarshan_frontend/src/css-files/AdminExam.css
+++ b/Margadarshan_frontend/src/css-files/AdminExam.css
@@ -16,14 +16,14 @@
     /* top:3vw; */
 }
 .Ani{
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
     align-items: center;
     place-items:center;
 }
 .Rasu{
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
     align-items: start;
     /* background-color:blue; */
     /* width: 450px; */
@@ -82,16 +82,25 @@ input[type="text"] {
     border-radius:5vw ;
     width:330px;
 }
-.ExamAdmin_UploadButton{
-    background-color: white;
-    color: black;
-    /* border-radius: 20px; */
-    border-radius: 5vw;
-    width: 150px;
-    /* width: 8vw; */
-    /* margin-left: 360px; */
-    margin-left: 20vw;
-    cursor: pointer;
+/*.ExamAdmin_UploadButton{*/
+/*    background-color: white;*/
+/*    color: black;*/
+/*    !* border-radius: 20px; *!*/
+/*    border-radius: 5vw;*/
+/*    !*width: 150px;*!*/
+/*     width: 8vw;*/
+/*    !* margin-left: 360px; *!*/
+/*    margin-left: 20vw;*/
+/*    cursor: pointer;*/
+/*}*/
+button[type="submit"] {
+    /* margin-left: 30px; */
+    width: 300px;
+    height: 40px;
+    border-radius: 20px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-left: 50px;
 }
 .adminExam-Button{
     /* position: absolute; */
