--- a/Margadarshan_frontend/src/css-files/SopDialogBox.css
+++ b/Margadarshan_frontend/src/css-files/SopDialogBox.css
@@ -5,10 +5,10 @@ body{
 .sop_first-div{
     position: relative;
     background-color:#152039;
-    height: 500px;
-    width: 820px;
+    height: 400px;
+    width: 620px;
     align-self: center;
-    margin:200px;
+    margin:100px;
     margin-left: 660px;
 }
 @media screen and (max-width:754px) {
@@ -61,26 +61,32 @@ body{
     }
 }
 
-.select{
+/* .select{
     display: flex;
     row-gap:25px;
-}
+} */
 .select input{
     width:350px;
     height:40px ;
     border-radius:20px;
     font-weight: 700;
-    margin-top: 400px;
+    margin-top:200px;
     margin-left: 50px;
 
 }
-input[type="submit"]{
-    margin-left:30px;
+.sop_uploadbtn {
+    /*margin-left:30px;*/
+    width:350px;
+    height:40px ;
+    border-radius:20px;
+    font-weight: 700;
+    margin-top:300px;
+    margin-left: 50px;
 }
 .title{
     position: absolute;
-    top: 100px;
-    right:20px;
+    top:30px;
+    right:100px;
     width: 400px;
 }
 #document-name{
