--- a/Margadarshan_frontend/src/css-files/AdminExam.css
+++ b/Margadarshan_frontend/src/css-files/AdminExam.css
@@ -78,29 +78,16 @@
     line-height: 70px;
 
 }
-input[type="text"] {
-    border-radius:5vw ;
-    width:330px;
-}
-/*.ExamAdmin_UploadButton{*/
-/*    background-color: white;*/
-/*    color: black;*/
-/*    !* border-radius: 20px; *!*/
-/*    border-radius: 5vw;*/
-/*    !*width: 150px;*!*/
-/*     width: 8vw;*/
-/*    !* margin-left: 360px; *!*/
-/*    margin-left: 20vw;*/
-/*    cursor: pointer;*/
-/*}*/
-button[type="submit"] {
-    /* margin-left: 30px; */
-    width: 300px;
-    height: 40px;
-    border-radius: 20px;
-    font-weight: 700;
-    margin-top: 30px;
-    margin-left: 50px;
+.ExamAdmin_UploadButton{
+   background-color: white;
+   color: black;
+   border-radius: 20px;
+   border-radius: 5vw;
+   width: 150px;
+    width: 8vw;
+   margin-left: 360px; 
+   margin-left: 20vw;
+   cursor: pointer;
 }
 .adminExam-Button{
     /* position: absolute; */
