--- a/Margadarshan_frontend/src/css-files/documentstyle.css
+++ b/Margadarshan_frontend/src/css-files/documentstyle.css
@@ -39,6 +39,7 @@ body {
 }
 
 .doc-form {
+    width: 500px;
     position: absolute;
     z-index: 9999;
     background-color: #383d52;
@@ -60,10 +61,11 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    gap: 20px;
 }
 
 #doc-form-img{
-    flex: 2;
+    flex: 3;
 }
 
 #doc-form-submit-btn {
@@ -71,9 +73,12 @@ body {
     flex-direction: column;
     justify-content: center;
     flex: 1;
+    flex-wrap: wrap;
+    align-items: flex-end;
 }
 
 .doc-browse-button {
+    width: 200px;
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.1em 0.6em;
@@ -126,3 +131,32 @@ body {
     font-size: 1.3vw;
 }
 
+@media (max-width: 660px) {
+
+    .doc-img-input{
+        width: 100%;
+        padding-top: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .doc-form {
+        width: 350px;
+        position: absolute;
+        z-index: 9999;
+        background-color: #383d52;
+        padding: 30px;
+        border-radius: 10px;
+        right: 20px;
+        margin-left: 20px;
+        top: 8vw;
+    }
+
+    .doc-form h3{
+        color: #f1f1f1;
+        margin-bottom: 20px;
+        font-size: 18px;
+    }
+}
