--- a/Margadarshan_frontend/src/css-files/addScholarship.css
+++ b/Margadarshan_frontend/src/css-files/addScholarship.css
@@ -86,7 +86,7 @@
         height: 350px;
         padding-top: 15px;
     }
-    .file-img-addSch {
+    .file-img-addSch, .addSch-image {
         height: 120px;
     }
     .browse-button-addSch {
