--- a/Margadarshan_frontend/src/css-files/addUniversity.css
+++ b/Margadarshan_frontend/src/css-files/addUniversity.css
@@ -122,7 +122,7 @@
         height: 350px;
         padding-top: 15px;
     }
-    .file-img-addUni {
+    .file-img-addUni, .addUni-image {
         height: 120px;
     }
     .browse-button-addUni {
